k8s/chat-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chat
    tiers: backend
  name: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      lang: php
  template:
    metadata:
      labels:
        app: chat
        lang: php
    spec:
      volumes:
        - name: secret-mysql
          secret:
            secretName: mysql-secret
            items:
              - key: password
                path: password
      containers:
        - image: registry.gitlab.com/docker-exemple/chat_docker/chat:2.1.0
          name: chat
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: "/run/secrets/mysql"
              name: secret-mysql
          resources: 
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "350m"
          livenessProbe:
            httpGet:
              port: 80
              path: "/"
