k8s/back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
    lang: java
  ports:
  - port: 8080
    targetPort: http
    name: http
