k8s/chat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  type: ClusterIP
  selector:
    app: chat
    lang: php
  ports:
  - port: 80
    targetPort: http
    name: http
