k8s/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
    lang: react
  ports:
  - port: 80
    targetPort: http
    name: http
