k8s/back-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  labels:
    app: backend
    tiers: backend
spec:
  ingressClassName: nginx
  rules:
  - host: backdevops.tp.tpback
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend
            port: 
              number: 8080
