k8s/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: frontend
    tiers: frontend
spec:
  ingressClassName: nginx
  rules:
  - host: frontdevops.tp.tpfront
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
